# MPZ_dataset

./: CMakeLists.txt
src/: edge_map.cpp  edge_map.h  main.cpp
src/field/: Claussen.cpp  Claussen.h  angles.cpp  angles.h  auxmath.h  cvec2t.h  field.cpp  field.h  tangent_frame.cpp  tangent_frame.h  turning_number.cpp  turning_number.h
src/field/adt/: cvec3t.h  mat3t.h
